--- a/HoaHoc/nbproject/project.properties
+++ b/HoaHoc/nbproject/project.properties
@@ -27,10 +27,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/HoaHoc.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.autocomplete-2.0.0-beta2-sources.jar=/home/dong/autocomplete-2.0.0-beta2-sources.jar
+file.reference.autocomplete-2.0.0-beta2-sources.jar-1=/home/dong/Downloads/autocomplete-2.0.0-beta2-sources.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.jpa20-persistence.classpath}
+    ${libs.jpa20-persistence.classpath}:\
+    ${file.reference.autocomplete-2.0.0-beta2-sources.jar}:\
+    ${file.reference.autocomplete-2.0.0-beta2-sources.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
